Script for test

--- a/tdd-react-library/package.json
+++ b/tdd-react-library/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "watch": "tsc --watch"
+    "watch": "tsc --watch",
+    "test": "jest"
   },
   "devDependencies": {
     "@types/jest": "^29.0.0",
