--- a/tdd-react-library/package.json
+++ b/tdd-react-library/package.json
@@ -9,6 +9,7 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "^29.0.0",
     "jest": "^29.0.2",
     "ts-jest": "^28.0.8",
