--- a/tdd-react-library/package.json
+++ b/tdd-react-library/package.json
@@ -11,8 +11,10 @@
   "devDependencies": {
     "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "^29.0.0",
+    "@types/react": "^18.0.18",
     "jest": "^29.0.2",
-    "ts-jest": "^28.0.8",
-    "typescript": "^4.4.4"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "ts-jest": "^28.0.8"
   }
 }
