--- a/tdd-react-library/package.json
+++ b/tdd-react-library/package.json
@@ -10,11 +10,15 @@
   },
   "devDependencies": {
     "@testing-library/react-hooks": "^8.0.1",
-    "@types/jest": "^29.0.0",
     "@types/react": "^18.0.18",
+    "typescript": "^4.8.2"
+  },
+  "dependencies": {
+    "@types/jest": "^29.0.0",
     "jest": "^29.0.2",
+    "jest-environment-jsdom": "^29.0.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react-test-renderer": "^18.2.0",
     "ts-jest": "^28.0.8"
   }
 }
