--- a/tdd-react-library/package.json
+++ b/tdd-react-library/package.json
@@ -9,6 +9,8 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/react": "^18.0.18",
     "typescript": "^4.8.2"
@@ -18,6 +20,7 @@
     "jest": "^29.0.2",
     "jest-environment-jsdom": "^29.0.2",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-test-renderer": "^18.2.0",
     "ts-jest": "^28.0.8"
   }
